# cq-annotate

./: .gitignore  README.md  cq_annotate.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  tests.yml
cq_annotate/: callouts.py  dimensioning.py  overlays.py  views.py
examples/: add_assembly_arrows_example.py  add_assembly_lines_example.py  circular_dimensions_example.py  explode_assembly_example.py  safety_warning_example.py
tests/: test_assembly.py  test_dimensions.py  test_overlays.py
