[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cq-annotate"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Jeremy Wright" },
]
description = "An annotation extension designed to work with the CadQuery API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "cadquery@git+https://github.com/CadQuery/cadquery.git@master",
  "cadquery-ocp>=7.7.0a0,<7.8",
  "ezdxf",
  "multimethod>=1.11,<2.0",
  "nlopt",
  "typish",
  "casadi",
  "path",
  "svgutils",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black@git+https://github.com/cadquery/black.git@cq",
]

[project.urls]
"Homepage" = "https://github.com/jmwright/cq-annotate"
"Bug Tracker" = "https://github.com/jmwright/cq-annotate/issues"

[tool.hatch.metadata]
allow-direct-references = true
